--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -25,7 +25,7 @@
             TOTAL:
           </th>
           <th>
-            <%= cart_subtotal_cents / 100.0 %>
+            <%= humanized_money_with_symbol cart_subtotal_cents / 100.0 %>
           </th>
         </tr>
       </tfoot>
@@ -43,8 +43,7 @@
           data-description="Khurram Virani's Jungle Order"
           data-locale="auto"
           data-email="kvirani@gmail.com"
-          data-currency="cad">
-        </script>
+          data-currency="cad"></script>
       <% end %>
     </div>
   </div>
