--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -7,8 +7,8 @@
   <% if enhanced_cart.length <= 0 %>
     <%#TODO Make this part look better %>
     <div>
-      Cart is empty
-      <%= link_to 'Homepage', :root %>
+      Cart is empty.<br>
+      <%= link_to 'Go back to homepage', :root %>
     </div>
   <% else %>
     <div class="panel panel-default items">
