Complete order details feature
The order detail feature is finally completed.

James Cash was able to provide me with a lot of help. Including understanding a lot of the deep parts of Ruby and Rails.

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -5,7 +5,7 @@
   </header>
 
   <div class="order-summary jumbotron">
-    <%# <h4>Thank you for your order!</h4> %>
+    <h4>Thank you for your order!</h4>
     <div class="panel panel-default items">
       <table class="table table-bordered">
         <thead>
@@ -17,9 +17,7 @@
           </tr>
         </thead>
         <tbody>
-          <% @enhanced_order_items.each do |item| %>
-            <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
-          <% end %>
+          <%= render @order.line_items  %>
         </tbody>
         <tfoot>
           <tr>
@@ -27,24 +25,13 @@
               TOTAL:
             </th>
             <th>
-              <%= humanized_money_with_symbol cart_subtotal_cents / 100.0 %>
+              <%= humanized_money_with_symbol @order.total %>
             </th>
           </tr>
         </tfoot>
       </table>
     </div>
   </div>
-
-  <%# thing.inspect = 
-    #<LineItem id: 3, 
-      order_id: 3, 
-      product_id: 1, 
-      quantity: 1, 
-      item_price_cents: 6499, 
-      total_price_cents: 6499, 
-      created_at: "2020-04-30 01:51:39", 
-      updated_at: "2020-04-30 01:51:39"
-  >%>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
