Add email display

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -28,6 +28,12 @@
               <%= humanized_money_with_symbol @order.total %>
             </th>
           </tr>
+          <tr>
+            <th colspan="4">
+              Purchased by:
+              <%= @order.email %>
+            </th>
+          </tr>
         </tfoot>
       </table>
     </div>
