Complete admin dashboard page

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,5 @@
 <h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<%#TODO Try to make it look nicer. Use Bootstrap 3 elements. %>
+<%#TODO Link to the product and category admin list/index pages when displaying the counts.  %>
+Product count: <%= @number_of_products %><br>
+Category count: <%= @number_of_categories %>
