--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -17,7 +17,7 @@
         </tr>
       </thead>
       <tbody>
-        <%#= render categories here %>
+        <%= render @categories %>
       </tbody>
     </table>
 
