--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -30,12 +30,22 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li>
-          <%= link_to 'Login', :login %>
-        </li>
-        <li>
-          <%= link_to 'Sign Up', :signup %>
-        </li>
+        <% if (!current_user) %>
+          <li>
+            <%= link_to 'Login', :login %>
+          </li>
+          <li>
+            <%= link_to 'Sign Up', :signup %>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to "Welcome " + current_user[:first_name] + " " + current_user[:last_name] + "!" %>
+          </li>
+          <li>
+            <%= link_to 'Logout', :logout%>
+          </li>
+        <% end %>
+
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span class="text-danger"><%= fa_icon 'lock', text: 'Admin' %></span>
